--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ django-cors-headers==4.3.1
 python-decouple==3.8
 djangorestframework-simplejwt==5.3.0
 Pillow==10.1.0
+pandas==2.3.1
+openpyxl==3.1.5
