--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
@@ -26,12 +27,14 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.294.0",
     "next": "14.2.30",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
