--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ Pillow==10.1.0
 pandas==2.3.1
 openpyxl==3.1.5
 scikit-learn==1.4.2
+psutil==5.9.6
+python-dateutil==2.8.2
+xlrd==2.0.1
+numpy==1.24.3
